source/assets/styles/global/_reset-custom.scss
body {
	background-color: $black;
	color: $white;
	font-family: $brand-font-heebo;
	font-size: $font-size-16;
}

main {
	overflow: hidden;
}

hr {
	border: solid 2px $white;
	border-radius: 0;
	margin: $spacing-32 auto;
	max-width: 40px;
}

ul {
	margin: 0;
	padding: 0;
}

@media screen and (min-width: 1023px) {
	body {
		font-size: $font-size-18;
	}
}

